Cambios para prueba en render

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -21,15 +21,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cargo mis archivos finales"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_games = pd.read_csv('./gamesNoGS.csv', parse_dates=['release_date'])\n",
+    "df_games = pd.read_csv('./games.csv', parse_dates=['release_date'])\n",
     "df_items = pd.read_csv('./items.csv')\n",
     "df_reviews = pd.read_csv('./reviews_sentiment_analysis.csv')\n",
     "df_genres = pd.read_csv('./games_genres.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualizar los datasets resultantes"
    ]
   },
   {
@@ -60,7 +74,7 @@
        "      <th></th>\n",
        "      <th>app_name</th>\n",
        "      <th>release_date</th>\n",
-       "      <th>id</th>\n",
+       "      <th>item_id</th>\n",
        "      <th>precios</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -70,108 +84,108 @@
        "      <td>Lost Summoner Kitty</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>761140</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Ironbound</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>643980</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Real Pool 3D - Poolians</td>\n",
        "      <td>2017-07-24</td>\n",
        "      <td>670290</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>弹炸人2222</td>\n",
        "      <td>2017-12-07</td>\n",
        "      <td>767400</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Battle Royale Trainer</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>772540</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>SNOW - All Access Basic Pass</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>774276</td>\n",
-       "      <td>2</td>\n",
+       "      <td>9.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>SNOW - All Access Pro Pass</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>774277</td>\n",
-       "      <td>3</td>\n",
+       "      <td>18.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>SNOW - All Access Legend Pass</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>774278</td>\n",
-       "      <td>3</td>\n",
+       "      <td>29.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Race</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>768800</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Uncanny Islands</td>\n",
        "      <td>1900-01-01</td>\n",
        "      <td>768570</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Army of Tentacles: (Not) A Cthulhu Dating Sim:...</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>770380</td>\n",
-       "      <td>2</td>\n",
+       "      <td>10.99</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             app_name release_date      id  \\\n",
-       "0                                 Lost Summoner Kitty   2018-01-04  761140   \n",
-       "1                                           Ironbound   2018-01-04  643980   \n",
-       "2                             Real Pool 3D - Poolians   2017-07-24  670290   \n",
-       "3                                             弹炸人2222   2017-12-07  767400   \n",
-       "4                               Battle Royale Trainer   2018-01-04  772540   \n",
-       "5                        SNOW - All Access Basic Pass   2018-01-04  774276   \n",
-       "6                          SNOW - All Access Pro Pass   2018-01-04  774277   \n",
-       "7                       SNOW - All Access Legend Pass   2018-01-04  774278   \n",
-       "8                                                Race   2018-01-04  768800   \n",
-       "9                                     Uncanny Islands   1900-01-01  768570   \n",
-       "10  Army of Tentacles: (Not) A Cthulhu Dating Sim:...   2018-01-04  770380   \n",
+       "                                             app_name release_date  item_id  \\\n",
+       "0                                 Lost Summoner Kitty   2018-01-04   761140   \n",
+       "1                                           Ironbound   2018-01-04   643980   \n",
+       "2                             Real Pool 3D - Poolians   2017-07-24   670290   \n",
+       "3                                             弹炸人2222   2017-12-07   767400   \n",
+       "4                               Battle Royale Trainer   2018-01-04   772540   \n",
+       "5                        SNOW - All Access Basic Pass   2018-01-04   774276   \n",
+       "6                          SNOW - All Access Pro Pass   2018-01-04   774277   \n",
+       "7                       SNOW - All Access Legend Pass   2018-01-04   774278   \n",
+       "8                                                Race   2018-01-04   768800   \n",
+       "9                                     Uncanny Islands   1900-01-01   768570   \n",
+       "10  Army of Tentacles: (Not) A Cthulhu Dating Sim:...   2018-01-04   770380   \n",
        "\n",
        "    precios  \n",
-       "0         1  \n",
-       "1         0  \n",
-       "2         0  \n",
-       "3         1  \n",
-       "4         1  \n",
-       "5         2  \n",
-       "6         3  \n",
-       "7         3  \n",
-       "8         0  \n",
-       "9         0  \n",
-       "10        2  "
+       "0      4.99  \n",
+       "1      0.00  \n",
+       "2      0.00  \n",
+       "3      0.99  \n",
+       "4      3.99  \n",
+       "5      9.99  \n",
+       "6     18.99  \n",
+       "7     29.99  \n",
+       "8      0.00  \n",
+       "9      0.00  \n",
+       "10    10.99  "
       ]
      },
      "execution_count": 4,
@@ -185,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +272,7 @@
        "4  76561197970982479   3830.0             333.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +368,7 @@
        "4            js41637  2013.0   227300       True                   2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +403,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
+       "      <th>item_id</th>\n",
        "      <th>Indie</th>\n",
        "      <th>Action</th>\n",
        "      <th>Casual</th>\n",
@@ -586,18 +600,18 @@
        "</div>"
       ],
       "text/plain": [
-       "        id  Indie  Action  Casual  Adventure  Strategy  Simulation  RPG  \\\n",
-       "0   761140    1.0     1.0     1.0        0.0       1.0         1.0  0.0   \n",
-       "1   643980    1.0     0.0     0.0        0.0       1.0         0.0  1.0   \n",
-       "2   670290    1.0     0.0     1.0        0.0       0.0         1.0  0.0   \n",
-       "3   767400    0.0     1.0     1.0        1.0       0.0         0.0  0.0   \n",
-       "4   772540    0.0     1.0     0.0        1.0       0.0         1.0  0.0   \n",
-       "5   774276    1.0     0.0     0.0        0.0       0.0         1.0  0.0   \n",
-       "6   774277    1.0     0.0     0.0        0.0       0.0         1.0  0.0   \n",
-       "7   774278    1.0     0.0     0.0        0.0       0.0         1.0  0.0   \n",
-       "8   768800    1.0     0.0     1.0        0.0       0.0         1.0  0.0   \n",
-       "9   768570    1.0     1.0     0.0        0.0       0.0         1.0  0.0   \n",
-       "10  770380    1.0     1.0     1.0        1.0       0.0         0.0  1.0   \n",
+       "    item_id  Indie  Action  Casual  Adventure  Strategy  Simulation  RPG  \\\n",
+       "0    761140    1.0     1.0     1.0        0.0       1.0         1.0  0.0   \n",
+       "1    643980    1.0     0.0     0.0        0.0       1.0         0.0  1.0   \n",
+       "2    670290    1.0     0.0     1.0        0.0       0.0         1.0  0.0   \n",
+       "3    767400    0.0     1.0     1.0        1.0       0.0         0.0  0.0   \n",
+       "4    772540    0.0     1.0     0.0        1.0       0.0         1.0  0.0   \n",
+       "5    774276    1.0     0.0     0.0        0.0       0.0         1.0  0.0   \n",
+       "6    774277    1.0     0.0     0.0        0.0       0.0         1.0  0.0   \n",
+       "7    774278    1.0     0.0     0.0        0.0       0.0         1.0  0.0   \n",
+       "8    768800    1.0     0.0     1.0        0.0       0.0         1.0  0.0   \n",
+       "9    768570    1.0     1.0     0.0        0.0       0.0         1.0  0.0   \n",
+       "10   770380    1.0     1.0     1.0        1.0       0.0         0.0  1.0   \n",
        "\n",
        "    Free to Play  Early Access  Sports  Massively Multiplayer  Racing  \n",
        "0            0.0           0.0     0.0                    0.0     0.0  \n",
@@ -613,7 +627,7 @@
        "10           0.0           0.0     0.0                    0.0     0.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,27 +640,188 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# juntamos todo el dataset.\n"
+    "# junto los diferentes datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_data = df_games.merge(df_items, left_on='id', right_on='item_id', how='inner')\\\n",
-    "                     .merge(df_reviews, left_on='id', right_on='item_id', how='inner')\\\n",
-    "                     \n"
+    "Items_genre=df_items.drop(['playtime_forever'],axis=1)\n",
+    "Items_genre = Items_genre.merge(df_genres, on='item_id', how='inner')\n",
+    "games_genre = df_games.merge(df_genres, on='item_id', how='inner')\n",
+    "reviews_genre = df_reviews.merge(df_genres, on='item_id', how='inner')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_merged_gen_specs=df_genres.merge(df_specs, on='id', how='inner')"
+    "def uso_memoria(df):\n",
+    "    # Obtener el uso de memoria del DataFrame\n",
+    "    uso_de_memoria = df.memory_usage(deep=True).sum()\n",
+    "    # Convertir bytes a megabytes (opcional)\n",
+    "    uso_de_memoria_mb = uso_de_memoria / (1024**2)\n",
+    "    print(f\"Uso de memoria total del DataFrame: {uso_de_memoria} bytes ({uso_de_memoria_mb:.2f} MB)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>Indie</th>\n",
+       "      <th>Action</th>\n",
+       "      <th>Casual</th>\n",
+       "      <th>Adventure</th>\n",
+       "      <th>Strategy</th>\n",
+       "      <th>Simulation</th>\n",
+       "      <th>RPG</th>\n",
+       "      <th>Free to Play</th>\n",
+       "      <th>Early Access</th>\n",
+       "      <th>Sports</th>\n",
+       "      <th>Massively Multiplayer</th>\n",
+       "      <th>Racing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>76561197970982479</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>doctr</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             user_id  item_id  Indie  Action  Casual  Adventure  Strategy  \\\n",
+       "0  76561197970982479     10.0    0.0     1.0     0.0        0.0       0.0   \n",
+       "1              doctr     10.0    0.0     1.0     0.0        0.0       0.0   \n",
+       "\n",
+       "   Simulation  RPG  Free to Play  Early Access  Sports  Massively Multiplayer  \\\n",
+       "0         0.0  0.0           0.0           0.0     0.0                    0.0   \n",
+       "1         0.0  0.0           0.0           0.0     0.0                    0.0   \n",
+       "\n",
+       "   Racing  \n",
+       "0     0.0  \n",
+       "1     0.0  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Items_genre.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uso de memoria total del DataFrame: 511319263 bytes (487.63 MB)\n"
+     ]
+    }
+   ],
+   "source": [
+    "uso_memoria(Items_genre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uso de memoria total del DataFrame: 6583461 bytes (6.28 MB)\n"
+     ]
+    }
+   ],
+   "source": [
+    "uso_memoria(games_genre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uso de memoria total del DataFrame: 8667243 bytes (8.27 MB)\n"
+     ]
+    }
+   ],
+   "source": [
+    "uso_memoria(reviews_genre)"
    ]
   },
   {
@@ -659,22 +834,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              price            id\n",
-      "count  28824.000000  3.008500e+04\n",
-      "mean       8.857281  4.440048e+05\n",
-      "std       16.149897  1.842230e+05\n",
-      "min        0.000000  1.000000e+01\n",
-      "25%        2.990000  3.218300e+05\n",
-      "50%        4.990000  4.383000e+05\n",
-      "75%        9.990000  5.889700e+05\n",
-      "max      995.000000  2.028850e+06\n"
+      "                 id       precios\n",
+      "count  3.008500e+04  30085.000000\n",
+      "mean   4.440048e+05      1.457304\n",
+      "std    1.842230e+05      0.824768\n",
+      "min    1.000000e+01      0.000000\n",
+      "25%    3.218300e+05      1.000000\n",
+      "50%    4.383000e+05      1.000000\n",
+      "75%    5.889700e+05      2.000000\n",
+      "max    2.028850e+06      3.000000\n"
      ]
     }
    ],
@@ -685,33 +860,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            item_id  playtime_forever\n",
-      "count  3.285246e+06      3.285246e+06\n",
-      "mean   1.772373e+05      1.555251e+03\n",
-      "std    1.266741e+05      6.721032e+03\n",
-      "min    1.000000e+01      1.000000e+00\n",
-      "25%    3.912000e+04      4.400000e+01\n",
-      "50%    2.149500e+05      2.050000e+02\n",
-      "75%    2.630600e+05      8.080000e+02\n",
-      "max    5.286600e+05      6.427730e+05\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1    14306\n",
+       "2     9280\n",
+       "3     3659\n",
+       "0     2840\n",
+       "Name: precios, dtype: int64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Descripción de df_items\n",
-    "print(df_items.describe())"
+    "#Comprobando la suposición anterior\n",
+    "df_games['precios'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Se ve que la media de Sentiment analisis es mayor a 1, por lo que deberia haber mas reviews positivas que negativas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -733,6 +914,29 @@
    "source": [
     "# Descripción de df_reviews\n",
     "print(df_reviews.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    31375\n",
+       "1    10111\n",
+       "0     7676\n",
+       "Name: sentiment_analysis, dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_reviews['sentiment_analysis'].value_counts()"
    ]
   },
   {
