--- a/ml.ipynb
+++ b/ml.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df_games = pd.read_csv('./gamesNoGS.csv', parse_dates=['release_date'])\n",
+    "df_items = pd.read_csv('./items.csv')\n",
+    "df_reviews = pd.read_csv('./reviews_sentiment_analysis.csv')\n",
     "df_genres = pd.read_csv('./games_genres.csv')\n",
+    "df_games = pd.read_csv('./games.csv', parse_dates=['release_date'])\n",
+    "df_specs= pd.read_csv('./games_specs.csv')\n",
     "# Combinar los DataFrames\n",
     "# Eliminar columnas innecesarias\n",
     "# df.drop(['release_date'], axis=1, inplace=True)\n",
@@ -19,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -55,35 +58,35 @@
        "      <td>Lost Summoner Kitty</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>761140</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Ironbound</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>643980</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Real Pool 3D - Poolians</td>\n",
        "      <td>2017-07-24</td>\n",
        "      <td>670290</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>弹炸人2222</td>\n",
        "      <td>2017-12-07</td>\n",
        "      <td>767400</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Battle Royale Trainer</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>772540</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3.99</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -91,14 +94,14 @@
       ],
       "text/plain": [
        "                  app_name release_date      id  precios\n",
-       "0      Lost Summoner Kitty   2018-01-04  761140        1\n",
-       "1                Ironbound   2018-01-04  643980        0\n",
-       "2  Real Pool 3D - Poolians   2017-07-24  670290        0\n",
-       "3                  弹炸人2222   2017-12-07  767400        1\n",
-       "4    Battle Royale Trainer   2018-01-04  772540        1"
+       "0      Lost Summoner Kitty   2018-01-04  761140     4.99\n",
+       "1                Ironbound   2018-01-04  643980     0.00\n",
+       "2  Real Pool 3D - Poolians   2017-07-24  670290     0.00\n",
+       "3                  弹炸人2222   2017-12-07  767400     0.99\n",
+       "4    Battle Royale Trainer   2018-01-04  772540     3.99"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +138,7 @@
        "      <th></th>\n",
        "      <th>app_name</th>\n",
        "      <th>release_date</th>\n",
-       "      <th>id</th>\n",
+       "      <th>item_id</th>\n",
        "      <th>precios</th>\n",
        "      <th>Indie</th>\n",
        "      <th>Action</th>\n",
@@ -143,12 +146,17 @@
        "      <th>Adventure</th>\n",
        "      <th>Strategy</th>\n",
        "      <th>Simulation</th>\n",
-       "      <th>RPG</th>\n",
-       "      <th>Free to Play</th>\n",
-       "      <th>Early Access</th>\n",
-       "      <th>Sports</th>\n",
+       "      <th>...</th>\n",
        "      <th>Massively Multiplayer</th>\n",
        "      <th>Racing</th>\n",
+       "      <th>Single-player</th>\n",
+       "      <th>Multi-player</th>\n",
+       "      <th>Full controller support</th>\n",
+       "      <th>Partial Controller Support</th>\n",
+       "      <th>Steam Leaderboards</th>\n",
+       "      <th>Co-op</th>\n",
+       "      <th>Cross-Platform Multiplayer</th>\n",
+       "      <th>Online Multi-Player</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -157,13 +165,18 @@
        "      <td>Lost Summoner Kitty</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>761140</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4.99</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -176,50 +189,65 @@
        "      <td>Ironbound</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>643980</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Real Pool 3D - Poolians</td>\n",
        "      <td>2017-07-24</td>\n",
        "      <td>670290</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>弹炸人2222</td>\n",
        "      <td>2017-12-07</td>\n",
        "      <td>767400</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.99</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -233,13 +261,18 @@
        "      <td>Battle Royale Trainer</td>\n",
        "      <td>2018-01-04</td>\n",
        "      <td>772540</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3.99</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -249,50 +282,117 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  app_name release_date      id  precios  Indie  Action  \\\n",
-       "0      Lost Summoner Kitty   2018-01-04  761140        1    1.0     1.0   \n",
-       "1                Ironbound   2018-01-04  643980        0    1.0     0.0   \n",
-       "2  Real Pool 3D - Poolians   2017-07-24  670290        0    1.0     0.0   \n",
-       "3                  弹炸人2222   2017-12-07  767400        1    0.0     1.0   \n",
-       "4    Battle Royale Trainer   2018-01-04  772540        1    0.0     1.0   \n",
+       "                  app_name release_date  item_id  precios  Indie  Action  \\\n",
+       "0      Lost Summoner Kitty   2018-01-04   761140     4.99    1.0     1.0   \n",
+       "1                Ironbound   2018-01-04   643980     0.00    1.0     0.0   \n",
+       "2  Real Pool 3D - Poolians   2017-07-24   670290     0.00    1.0     0.0   \n",
+       "3                  弹炸人2222   2017-12-07   767400     0.99    0.0     1.0   \n",
+       "4    Battle Royale Trainer   2018-01-04   772540     3.99    0.0     1.0   \n",
        "\n",
-       "   Casual  Adventure  Strategy  Simulation  RPG  Free to Play  Early Access  \\\n",
-       "0     1.0        0.0       1.0         1.0  0.0           0.0           0.0   \n",
-       "1     0.0        0.0       1.0         0.0  1.0           1.0           0.0   \n",
-       "2     1.0        0.0       0.0         1.0  0.0           1.0           0.0   \n",
-       "3     1.0        1.0       0.0         0.0  0.0           0.0           0.0   \n",
-       "4     0.0        1.0       0.0         1.0  0.0           0.0           0.0   \n",
+       "   Casual  Adventure  Strategy  Simulation  ...  Massively Multiplayer  \\\n",
+       "0     1.0        0.0       1.0         1.0  ...                    0.0   \n",
+       "1     0.0        0.0       1.0         0.0  ...                    0.0   \n",
+       "2     1.0        0.0       0.0         1.0  ...                    0.0   \n",
+       "3     1.0        1.0       0.0         0.0  ...                    0.0   \n",
+       "4     0.0        1.0       0.0         1.0  ...                    0.0   \n",
        "\n",
-       "   Sports  Massively Multiplayer  Racing  \n",
-       "0     0.0                    0.0     0.0  \n",
-       "1     0.0                    0.0     0.0  \n",
-       "2     1.0                    0.0     0.0  \n",
-       "3     0.0                    0.0     0.0  \n",
-       "4     0.0                    0.0     0.0  "
+       "   Racing  Single-player  Multi-player  Full controller support  \\\n",
+       "0     0.0            1.0           0.0                      0.0   \n",
+       "1     0.0            1.0           1.0                      0.0   \n",
+       "2     0.0            1.0           1.0                      0.0   \n",
+       "3     0.0            1.0           0.0                      0.0   \n",
+       "4     0.0            1.0           0.0                      0.0   \n",
+       "\n",
+       "   Partial Controller Support  Steam Leaderboards  Co-op  \\\n",
+       "0                         0.0                 0.0    0.0   \n",
+       "1                         0.0                 0.0    0.0   \n",
+       "2                         0.0                 0.0    0.0   \n",
+       "3                         0.0                 0.0    0.0   \n",
+       "4                         0.0                 0.0    0.0   \n",
+       "\n",
+       "   Cross-Platform Multiplayer  Online Multi-Player  \n",
+       "0                         0.0                  0.0  \n",
+       "1                         1.0                  1.0  \n",
+       "2                         0.0                  1.0  \n",
+       "3                         0.0                  0.0  \n",
+       "4                         0.0                  0.0  \n",
+       "\n",
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df_gs = df_genres.merge(df_specs, on='item_id', how='inner')\n",
+    "df = df_games.merge(df_gs, on='item_id', how='inner')\n",
+    "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Half-Life: Blue Shift', 'Half-Life 2', 'Half-Life: Source', 'Day of Defeat: Source', 'Half-Life Deathmatch: Source']\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 30091 entries, 0 to 30090\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column                      Non-Null Count  Dtype         \n",
+      "---  ------                      --------------  -----         \n",
+      " 0   app_name                    30090 non-null  object        \n",
+      " 1   release_date                30091 non-null  datetime64[ns]\n",
+      " 2   item_id                     30091 non-null  int64         \n",
+      " 3   precios                     30091 non-null  float64       \n",
+      " 4   Indie                       30091 non-null  float64       \n",
+      " 5   Action                      30091 non-null  float64       \n",
+      " 6   Casual                      30091 non-null  float64       \n",
+      " 7   Adventure                   30091 non-null  float64       \n",
+      " 8   Strategy                    30091 non-null  float64       \n",
+      " 9   Simulation                  30091 non-null  float64       \n",
+      " 10  RPG                         30091 non-null  float64       \n",
+      " 11  Free to Play                30091 non-null  float64       \n",
+      " 12  Early Access                30091 non-null  float64       \n",
+      " 13  Sports                      30091 non-null  float64       \n",
+      " 14  Massively Multiplayer       30091 non-null  float64       \n",
+      " 15  Racing                      30091 non-null  float64       \n",
+      " 16  Single-player               30091 non-null  float64       \n",
+      " 17  Multi-player                30091 non-null  float64       \n",
+      " 18  Full controller support     30091 non-null  float64       \n",
+      " 19  Partial Controller Support  30091 non-null  float64       \n",
+      " 20  Steam Leaderboards          30091 non-null  float64       \n",
+      " 21  Co-op                       30091 non-null  float64       \n",
+      " 22  Cross-Platform Multiplayer  30091 non-null  float64       \n",
+      " 23  Online Multi-Player         30091 non-null  float64       \n",
+      "dtypes: datetime64[ns](1), float64(21), int64(1), object(1)\n",
+      "memory usage: 5.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Unreal Gold', 'Half-Life', 'Descent: FreeSpace – The Great War', 'Freespace 2', 'Descent']\n"
      ]
     }
    ],
@@ -300,11 +400,13 @@
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
     "def recomendacion_juego(id_producto, num_recomendaciones=5):\n",
-    "    df = df_games.merge(df_genres, on='id', how='inner')\n",
+    "    df_gs = df_genres.merge(df_specs, on='item_id', how='inner')\n",
+    "    df = df_games.merge(df_gs, on='item_id', how='inner')\n",
+    "    \n",
     "    # Obtener el vector de géneros del juego de entrada\n",
-    "    juego_vector = df[df['id'] == id_producto].iloc[:, 2:].values.reshape(1, -1)\n",
+    "    juego_vector = df[df['item_id'] == id_producto].iloc[:, 3:].values.reshape(1, -1)\n",
     "    # Calcular la similitud del coseno entre el juego de entrada y todos los demás juegos\n",
-    "    similarity_scores = cosine_similarity(df.iloc[:, 2:], juego_vector)\n",
+    "    similarity_scores = cosine_similarity(df.iloc[:, 3:], juego_vector)\n",
     "    # Obtener los índices de los juegos más similares\n",
     "    similar_indices = similarity_scores.argsort(axis=0)[::-1][:num_recomendaciones]\n",
     "\n",
@@ -314,7 +416,7 @@
     "    return recomendaciones\n",
     "\n",
     "# Ejemplo de uso\n",
-    "id_producto = 130  # ID de un juego de entrada\n",
+    "id_producto = 70  # ID de un juego de entrada\n",
     "recomendaciones = recomendacion_juego(id_producto)\n",
     "print(recomendaciones)"
    ]
