--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -7,10 +7,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import zscore\n"
+    "from scipy.stats import zscore"
    ]
   },
   {
@@ -651,7 +650,7 @@
    "source": [
     "Items_genre = df_items.merge(df_genres, on='item_id', how='inner')\n",
     "games_genre = df_games.merge(df_genres, on='item_id', how='inner')\n",
-    "reviews_genre = df_reviews.merge(df_genres, on='item_id', how='inner')\n"
+    "reviews_genre = df_reviews.merge(df_genres, on='item_id', how='inner')"
    ]
   },
   {
@@ -805,7 +804,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_items_reducido = df_items.sample(frac=0.2, random_state=42)  # Tomar una muestra aleatoria del 50% de las filas\n"
+    "df_items_reducido = df_items.sample(frac=0.2, random_state=42)  # Tomar una muestra aleatoria del 50% de las filas"
    ]
   },
   {
@@ -836,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
